fixed header spacing on safari and firefox

--- a/templates/css/index.css
+++ b/templates/css/index.css
@@ -430,40 +430,74 @@ footer {
     }
 }
 
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 .card-container {
     width: 100%;
     max-width: 410px;
     min-width: 300px;
     height: 400px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     background-color: var(--primary-color);
     border-radius: 30px;
     overflow: hidden;
+    -webkit-transition: -webkit-transform 0.3s, -webkit-box-shadow 0.3s;
+    transition: -webkit-transform 0.3s, -webkit-box-shadow 0.3s;
+    -o-transition: transform 0.3s, box-shadow 0.3s;
     transition: transform 0.3s, box-shadow 0.3s;
+    transition: transform 0.3s, box-shadow 0.3s, -webkit-transform 0.3s, -webkit-box-shadow 0.3s;
     position: relative;
 }
 
 .card-container:hover {
-    transform: translateY(-10px);
-    box-shadow: 8px 10px 0.1px 0 var(--primary-color);
+    -webkit-transform: translateY(-10px);
+        -ms-transform: translateY(-10px);
+            transform: translateY(-10px);
+    -webkit-box-shadow: 8px 10px 0.1px 0 var(--primary-color);
+            box-shadow: 8px 10px 0.1px 0 var(--primary-color);
 }
 
 /* Card content */
 .card-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   height: 600px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 20px;
   background-color: var(--secondary-color);
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  -o-transition: transform 0.2s;
   transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
   position: relative;
 }
 
 .card-container:hover .card-content {
-    transform: translateY(-150px);
+    -webkit-transform: translateY(-150px);
+        -ms-transform: translateY(-150px);
+            transform: translateY(-150px);
 }
 
 .card-title {
@@ -477,8 +511,14 @@ footer {
 .card-description {
     font-size: 1rem;
     font-weight: 500;
+    -webkit-transition: -webkit-transform 0.4s ease;
+    transition: -webkit-transform 0.4s ease;
+    -o-transition: transform 0.4s ease;
     transition: transform 0.4s ease;
-    transform: translateY(30px);
+    transition: transform 0.4s ease, -webkit-transform 0.4s ease;
+    -webkit-transform: translateY(30px);
+        -ms-transform: translateY(30px);
+            transform: translateY(30px);
     margin-bottom: 20px;
     text-align: center;
     line-height: 1.6;
@@ -486,29 +526,47 @@ footer {
 
 .card-container:hover .card-description {
     opacity: 1;
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
 }
 
 .card-img {
   height: 80%;
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 /* Slide-up button */
 .card-button {
     background-color: var(--primary-color);
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    transform: translateY(150%);
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-transform: translateY(150%);
+        -ms-transform: translateY(150%);
+            transform: translateY(150%);
+    -webkit-transition: scale 0.4s ease, -webkit-transform 0.4s ease;
+    transition: scale 0.4s ease, -webkit-transform 0.4s ease;
+    -o-transition: transform 0.4s ease, scale 0.4s ease;
     transition: transform 0.4s ease, scale 0.4s ease;
+    transition: transform 0.4s ease, scale 0.4s ease, -webkit-transform 0.4s ease;
 }
 
 .card-container:hover .card-button {
-    transform: translateY(0);
-    box-shadow: 8px 10px 0.1px 0 var(--secondary-color);
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-box-shadow: 8px 10px 0.1px 0 var(--secondary-color);
+            box-shadow: 8px 10px 0.1px 0 var(--secondary-color);
 }
 
 @media screen and (max-width: 768px) {
@@ -520,7 +578,9 @@ footer {
     }
     .card-description {
         font-size: 0.95rem;
-        transform: translateY(80px);
+        -webkit-transform: translateY(80px);
+            -ms-transform: translateY(80px);
+                transform: translateY(80px);
     }
     .card-title {
         font-size: 1.58rem;
